# bazel-notes

./: README.md  in_2019  ng-new-README.md  ng-new-ngc-README.md  ngb-README.md
bazelbuild-examples/cpp-tutorial/stage1/: bazel-bin  bazel-out  bazel-stage1  bazel-testlogs  cr.md
bazelbuild-examples/cpp-tutorial/stage2/: bazel-bin  bazel-out  bazel-stage2  bazel-testlogs
bazelbuild-examples/cpp-tutorial/stage3/: README.md  bazel-bin  bazel-out  bazel-stage3  bazel-testlogs  cr.md
bazelbuild-examples/java-maven/: cr.md
bazelbuild-examples/java-tutorial/: bazel-bin  bazel-java-tutorial  bazel-out  bazel-testlogs  cr.md
bazelbuildexamples/java-tutorial/: bazel-bin  bazel-java-tutorial  bazel-out  bazel-testlogs
new-angular-workspace/: README.md  package-lock.json  package.json
new-collection/: README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
new-collection-angular-bazel/: README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
new-collection-angular-bazel/apps/my-app/e2e/src/: app.e2e-spec.ts
new-collection-angular-bazel/projects/my-app/src/: BUILD.bazel  index.html
new-collection-angular-bazel/projects/my-app/src/app/: app.component.spec.ts
new-collection-angular-bazel/src/app/: app.component.ts
new-collection/apps/my-app/e2e/: BUILD.bazel
new-collection/apps/my-app/e2e/src/: app.e2e-spec.ts
new-collection/apps/my-app/src/: BUILD.bazel  index.html
new-collection/apps/my-app/src/app/: app.component.spec.ts  app.component.ts
ng-bootstrap/: README.md  angular-metadata.tsconfig.json  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
ng-bootstrap-bazel/: README.md  angular-metadata.tsconfig.json  angular.json  angular.json.bak  karma.conf.js  ng-bootstrap-bazel.md  package-lock.json  package.json
ng-bootstrap-bazel/e2e/src/: app.e2e-spec.ts
ng-bootstrap-bazel/src/: BUILD.bazel  index.html
ng-bootstrap-bazel/src/app/: app.component.html  app.component.spec.ts  app.component.ts
ng-bootstrap/e2e/src/: app.e2e-spec.ts
ng-bootstrap/projects/my-app/src/: index.html
ng-bootstrap/projects/my-app/src/app/: app.component.html  app.module.ts
ng-bootstrap/src/: BUILD.bazel  index.html  styles.scss
ng-bootstrap/src/app/: app.component.html  app.component.spec.ts  app.component.ts
ng-new-collection-angular-bazel/: README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
ng-new-collection-angular-bazel-app-lib/: BUILD.bazel  README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
ng-new-collection-angular-bazel-app-lib/apps/my-app/e2e/: BUILD.bazel
ng-new-collection-angular-bazel-app-lib/apps/my-app/src/: BUILD.bazel  index.html
ng-new-collection-angular-bazel-app-lib/apps/my-app/src/app/: app.component.html  app.component.ts  app.module.ts
ng-new-collection-angular-bazel-app-lib/e2e/src/: app.e2e-spec.ts
ng-new-collection-angular-bazel-app-lib/libs/my-lib/: BUILD.bazel  my-lib.component.spec.ts  my-lib.service.ts
ng-new-collection-angular-bazel-app-lib/libs/my-lib-2/: ng-package.json  package.json
ng-new-collection-angular-bazel-app-lib/libs/my-lib-2/src/: public-api.ts
ng-new-collection-angular-bazel-app-lib/libs/my-lib-2/src/lib/: BUILD.bazel  my-lib-2.component.spec.ts  my-lib-2.module.ts
ng-new-collection-angular-bazel-app-lib/src/app/: app.component.spec.ts  app.component.ts
ng-new-collection-angular-bazel/e2e/src/: app.e2e-spec.ts
ng-new-collection-angular-bazel/src/: index.html
ng-new-collection-angular-bazel/src/app/: app.component.spec.ts  app.component.ts
ng-new-create-application-false/: README.md  angular.json  angular.json.bak  package-lock.json  package.json
ng-new-create-application-false/projects/my-app/src/app/: app.component.html  app.component.ts
ng-new-my-app/: README.md  angular.json  package-lock.json  package.json
ng-new-my-app/e2e/src/: app.e2e-spec.ts
ng-new-my-app/src/app/: app.component.html
ng-new-ngc-my-app/: angular.json  angular.json.bak  karma.conf.js  package-lock.json
ng-new-ngc-my-app/src/: index.html
ng-new-ngc-my-app/src/app/: app.component.spec.ts  app.component.ts
rules_nodejs/: cr.md
rules_nodejs/js_hello_world/: BUILD.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-js_hello_world  bazel-out  bazel-testlogs  package.json
rules_nodejs/js_hello_world/src/: index.js  index.spec.js
rules_nodejs/npm_init_bazel/: .babelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  cr.md  es5.babelrc  helloworld.ts  helloworldfn.ts  index.html  package.json
rules_nodejs/rollup_hello_world/: BUILD.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-rollup_hello_world  bazel-testlogs  cr.md  package.json  rollup.config.js
rules_nodejs/rollup_hello_world/hello_world/: BUILD.bazel  dependency.js  input.js
rules_nodejs/rollup_hello_world/src/: BUILD.bazel  foo.js
rules_nodejs/rollup_hello_world_ts/: BUILD.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-rollup_hello_world_ts  bazel-testlogs  tsconfig.json
rules_nodejs/rollup_hello_world_ts/src/: BUILD.bazel  main.ts
rules_nodejs/sass_hello_world/: README.md  WORKSPACE  bazel-bin  bazel-out  bazel-sass_hello_world  bazel-testlogs  cr.md  index.html
rules_nodejs/sass_hello_world/hello_world/: BUILD.bazel  main.scss
rules_nodejs/sass_hello_world/shared/: BUILD.bazel  _fonts.scss
rules_nodejs/ts_hello_world/: BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-ts_hello_world  cr.md  package.json  tsconfig.json
rules_nodejs/ts_hello_world/hello_world/: BUILD.bazel  app.ts  main.ts
rules_nodejs/ts_hello_world/shared/: greeter.ts
rules_nodejs/ts_hello_world/src/: index.spec.ts  index.ts
rules_nodejs/ts_hello_world_html/: README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-ts_hello_world_html  package.json  tsconfig.json
rules_nodejs/ts_hello_world_html/hello_world/: BUILD.bazel  index.html
rules_nodejs/ts_hello_world_html/shared/: BUILD.bazel
(+4 files in other folders)
