load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

package(default_visibility=["//visibility:public"])

# TODO: cr. Pass in result of ts_library target
# rollup_bundle(
#     name = "bundle",
#     srcs = ["foo.js"],
#     entry_point = "main.js",
#     # no config_file will default to @npm_bazel_rollup//:rollup.config.js
#     config_file = "//:rollup.config.js",
# )

