package(default_visibility=["//visibility:public"])

load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")

ts_library(
    name = "foo",
    srcs = [
        "foo.ts",
        "main.ts",
    ],
)

rollup_bundle(
    name = "bundle",
    deps = [ "foo" ],
    entry_point = "main.ts",
    # config_file = "//:rollup.config.js",
)
