# Generated BUILD file, see /tools/generator
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_module(
    name = "my-lib-2",
    srcs = [
        "my-lib-2.module.ts",
        "my-lib-2.component.ts",
        "my-lib-2.service.ts"
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@angular/core"
    ]
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//:tsconfig-test",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ]
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//:node_modules/zone.js/dist/zone-testing-bundle.js",
        "@npm//:node_modules/reflect-metadata/Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        "@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//:rxjs_umd_modules",
    ],
)